--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,12 @@ permalink: /:title
 timezone: Asia/Seoul
 version: 0.0.1
 
+# Language and locale settings
+language:
+  code: ko
+  locale: ko_KR
+  name: Korean
+
 # Exclude files from the production build
 exclude:
 - README.md
