HTML Compress 옵션 추가

--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,11 @@ sass:
   add_charset: true
   sass_dir: assets/styles/_scss
   style: compressed
+
+# Compress HTML
+# https://github.com/penibelst/jekyll-compress-html
+compress_html:
+  clippings: all
+  comments:
+  - "<!-- "
+  - " -->"
