Switch from Pygments to Rouge for syntax highlight

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ gems:
 markdown: kramdown
 
 # Code highlighter settings
-highlighter: pygments
+highlighter: rouge
 
 # Sass settings
 # http://sass-lang.com/
