Add Kramdown options

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,11 @@ gems:
 # Markdown settings
 markdown: kramdown
 
+# Kramdown settings
+kramdown:
+  input: GFM
+  hard_wrap: false
+
 # Code highlighter settings
 highlighter: rouge
 
