Turn off smart quotes

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ markdown: kramdown
 kramdown:
   input: GFM
   hard_wrap: false
+  smart_quotes:
+  - apos
+  - apos
+  - quot
+  - quot
 
 # Code highlighter settings
 highlighter: rouge
