--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,12 @@ language:
   locale: ko_KR
   name: Korean
 
+# File pathes
+path:
+  css: /assets/styles
+  js: /assets/scripts
+  img: /assets/images
+
 # Exclude files from the production build
 exclude:
 - README.md
