Add `safe` option to Jekyll build

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ permalink: /:title
 timezone: Asia/Seoul
 version: 0.0.1
 
+# Disable custom plugins
+safe: true
+
 # Language and locale settings
 language:
   code: ko
